Add HellKitchenChef class using OpenAI API for chef persona and recipe critique

--- a/notebooks/development_analysis_llm.ipynb
+++ b/notebooks/development_analysis_llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "dafbf26f",
    "metadata": {},
    "outputs": [],
@@ -11,11 +11,18 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from youtube_transcript_api import YouTubeTranscriptApi\n",
+    "from openai import OpenAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import time\n",
     "import re\n",
     "import sys\n",
     "sys.path.append('../src')\n",
     "\n",
-    "from food_buddy_api import get_food_buddy_recommendations"
+    "from food_buddy_api import get_food_buddy_recommendations\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -23,18 +30,154 @@
    "id": "0407f399",
    "metadata": {},
    "source": [
-    "Functions"
+    "Classes & Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "8cfd3aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HellKitchenChef:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        Chef RAG powered by OpenAI API - Fast, reliable, and demo-ready!\n",
+    "        Requires OPENAI_API_KEY in .env file\n",
+    "        \"\"\"\n",
+    "        print(\"🤖 Initializing Hell's Kitchen Chef with OpenAI...\")\n",
+    "        \n",
+    "        # Load environment variables\n",
+    "        load_dotenv()\n",
+    "        \n",
+    "        # Get API key from environment\n",
+    "        self.api_key = os.getenv('OPENAI_API_KEY')\n",
+    "        if not self.api_key:\n",
+    "            raise ValueError(\"❌ OPENAI_API_KEY not found in environment variables. Add it to your .env file!\")\n",
+    "        \n",
+    "        # Set up OpenAI client\n",
+    "        self.client = OpenAI(api_key=self.api_key)\n",
+    "        \n",
+    "        self.chef_persona = None\n",
+    "        self.model = \"gpt-4o\" \n",
+    "        \n",
+    "        print(\"✅ Hell's Kitchen Chef ready 🔥\")\n",
+    "\n",
+    "    def create_persona_from_transcript(self, clean_transcript: str) -> str:\n",
+    "        \"\"\"Create a chef personality paragraph from a transcript using OpenAI.\"\"\"\n",
+    "        print(\"🔍 Creating persona from transcript...\")\n",
+    "        \n",
+    "        # Truncate transcript if too long\n",
+    "        if len(clean_transcript) > 3000:\n",
+    "            clean_transcript = clean_transcript[:3000] + \"...\"\n",
+    "        \n",
+    "        try:\n",
+    "            response = self.client.chat.completions.create(\n",
+    "                model=self.model,\n",
+    "                messages=[\n",
+    "                    {\n",
+    "                        \"role\": \"system\",\n",
+    "                        \"content\": \"You are a chef personality analyzer. Create concise, accurate personality descriptions.\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"role\": \"user\", \n",
+    "                        \"content\": f\"\"\"Analyze this chef transcript and create a personality description:\n",
+    "\n",
+    "TRANSCRIPT (for reference only, do NOT repeat): {clean_transcript}\n",
+    "\n",
+    "Instructions:\n",
+    "1. Write ONE cohesive paragraph describing how this chef talks, reacts, and behaves\n",
+    "2. Focus on their speaking style, attitude, temperament, and way of giving advice\n",
+    "3. Include their use of humor, sarcasm, encouragement, or harsh criticism\n",
+    "4. Describe how they would respond to cooking questions and critique recipes\n",
+    "5. Use descriptive language about their personality, not generic chef traits\n",
+    "6. Keep it under 200 words\n",
+    "\n",
+    "Write the personality description:\"\"\"\n",
+    "                    }\n",
+    "                ],\n",
+    "                max_tokens=300,\n",
+    "                temperature=0.7\n",
+    "            )\n",
+    "            \n",
+    "            self.chef_persona = response.choices[0].message.content.strip()\n",
+    "            print(\"✅ Created Chef Persona:\\n\", self.chef_persona)\n",
+    "            return self.chef_persona\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            error_msg = f\"❌ Persona generation failed: {str(e)}\"\n",
+    "            print(error_msg)\n",
+    "            return error_msg\n",
+    "\n",
+    "    def critique_recipe(self, recipe_data, user_query: str) -> str:\n",
+    "        \"\"\"Generate a chef-style critique and recipe explanation using OpenAI.\"\"\"\n",
+    "        if not self.chef_persona:\n",
+    "            return \"❌ Create persona first using create_persona_from_transcript()\"\n",
+    "        \n",
+    "        # Normalize recipe_data\n",
+    "        if isinstance(recipe_data, list):\n",
+    "            recipe_data = recipe_data[0] if recipe_data else {}\n",
+    "        elif not isinstance(recipe_data, dict):\n",
+    "            return \"❌ Recipe data must be a dictionary or list of dictionaries\"\n",
+    "        \n",
+    "        # Extract fields\n",
+    "        recipe_name = recipe_data.get(\"Name\", recipe_data.get(\"name\", \"Unknown Recipe\"))\n",
+    "        ingredients = recipe_data.get(\"ingredients_clean\", recipe_data.get(\"ingredients\", \"No ingredients\"))\n",
+    "        instructions = recipe_data.get(\"recipe_instructions_clean\", recipe_data.get(\"instructions\", \"No instructions\"))\n",
+    "        \n",
+    "        # Truncate to stay within token limits\n",
+    "        if len(ingredients) > 1000:\n",
+    "            ingredients = ingredients[:1000] + \"...\"\n",
+    "        if len(instructions) > 1500:\n",
+    "            instructions = instructions[:1500] + \"...\"\n",
+    "        \n",
+    "        try:\n",
+    "            response = self.client.chat.completions.create(\n",
+    "                model=self.model,\n",
+    "                messages=[\n",
+    "                    {\n",
+    "                        \"role\": \"system\",\n",
+    "                        \"content\": f\"You are a chef with this exact personality: {self.chef_persona}\\n\\nStay completely in character. Be authentic to this personality.\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"role\": \"user\",\n",
+    "                        \"content\": f\"\"\"User request: \"{user_query}\"\n",
+    "\n",
+    "Recipe: {recipe_name}\n",
+    "Ingredients: {ingredients}\n",
+    "Instructions: {instructions}\n",
+    "\n",
+    "Respond in character following this structure:\n",
+    "1. First, criticize their choice with your typical attitude\n",
+    "2. Then say: \"But trust me, follow my instructions and you'll get a proper dish.\"\n",
+    "3. Then say: \"If you use all these ingredients: [list key ingredients], you're going to end up with something amazing. I was thinking about {recipe_name}.\"\n",
+    "4. Finally, give the cooking instructions in your own words with your personality\n",
+    "\n",
+    "Keep it conversational and authentic to your character. One response, stay in character throughout:\"\"\"\n",
+    "                    }\n",
+    "                ],\n",
+    "                max_tokens=600,\n",
+    "                temperature=0.8\n",
+    "            )\n",
+    "            \n",
+    "            return response.choices[0].message.content.strip()\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            error_msg = f\"❌ Recipe critique failed: {str(e)}\"\n",
+    "            print(error_msg)\n",
+    "            return error_msg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7941368c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_transcript_text(transcript):\n",
-    "    \"\"\"Rranscript cleaner adding commas after each snippet\"\"\"\n",
+    "    \"\"\"Transcript cleaner adding commas after each snippet\"\"\"\n",
     "    \n",
     "    # Add dot after each snippet, then join\n",
     "    text_parts = []\n",
@@ -59,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "4f11fbe4",
    "metadata": {},
    "outputs": [
@@ -80,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "7c077a00",
    "metadata": {},
    "outputs": [
@@ -103,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "687f1b1d",
    "metadata": {},
    "outputs": [
@@ -122,11 +265,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ec543a5b",
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e31eedac",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 Initializing Hell's Kitchen Chef with OpenAI...\n",
+      "✅ Hell's Kitchen Chef ready 🔥\n",
+      "🔍 Creating persona from transcript...\n",
+      "✅ Created Chef Persona:\n",
+      " The chef exhibits a fiery and intense demeanor, characterized by a rapid-fire speaking style and a penchant for colorful, often harsh critiques. Their approach is highly animated, employing vivid analogies and biting sarcasm to emphasize their points, such as comparing poorly cooked food to \"Barbie's vomit\" or \"Gandhi's flip-flop.\" This chef blends humor with criticism, using exaggerated expressions to drive home their dissatisfaction while maintaining an underlying sense of urgency and high standards. They are quick to express frustration, often escalating to yelling when faced with incompetence or culinary blunders, yet their outbursts are tinged with a unique brand of humor that lightens the severity of their reprimands. Despite their abrasive style, there's a clear desire to push their team towards excellence, albeit through tough love. When responding to cooking questions, they would likely deliver blunt, straightforward advice, unfiltered and laced with wit. Their temperament is fiery, demanding perfection and immediate improvement, leaving little room for mediocrity in the kitchen.\n",
+      "\n",
+      "Chef Critique & Recipe:\n",
+      " Oh, so you've decided to tango with pasta and chicken, have you? Brave choice, my friend. But let me tell you, if you go in there without a plan, you'll end up with a dish that looks like it was thrown together by a blindfolded toddler at a playdough convention. But trust me, follow my instructions and you'll get a proper dish.\n",
+      "\n",
+      "If you use all these ingredients: chicken, mustard, pasta, onion, tomatoes, zucchini, and parsley, you're going to end up with something amazing. I was thinking about Chicken Dijon & Pasta.\n",
+      "\n",
+      "Alright, listen up! Preheat that oven to 400 degrees. Not 401, not 399! Get it right, or the universe might implode. Grab your chicken and toss it into a shallow roasting pan like it owes you money. Mix your mustard with dressing like you're concocting a love potion – half of it goes over that chicken, now bake it for 40 minutes, uncovered! We want it to come out of there like it's just returned from a holiday in the Bahamas, all golden and fabulous.\n",
+      "\n",
+      "While that bird's getting its tan, grab your soup and water, mix it with the leftover mustard concoction like you're trying to solve a culinary Rubik's cube. Toss your pasta into this saucy party, along with your French Fried Onions, vegetables, and parsley. Make it look like the veggies are crashing a pasta party they weren't invited to!\n",
+      "\n",
+      "Spoon this colorful chaos around the chicken, and toss it back into the oven for another 15 minutes or until that chicken's no longer pink in the center – because no one wants a salmonella surprise for dinner, right? Sprinkle the remaining onions like you're the fairy godmother of flavor, bake for one more minute until they're golden, then step back and admire your masterpiece. Enjoy, and remember – no room for mediocrity in my kitchen!\n"
+     ]
+    }
+   ],
    "source": [
-    "`"
+    "# Instantiate the class\n",
+    "chef_rag = HellKitchenChef()\n",
+    "# Create a persona from the transcript\n",
+    "persona = chef_rag.create_persona_from_transcript(transcript_clean)\n",
+    "# Generate critique + recipe presentation\n",
+    "critique_and_recipe = chef_rag.critique_recipe(recipe[0], query)\n",
+    "print(\"\\nChef Critique & Recipe:\\n\", critique_and_recipe)"
    ]
   }
  ],
@@ -146,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
