Change clean_transcript_text function using an LLM solution

--- a/notebooks/development_analysis_llm.ipynb
+++ b/notebooks/development_analysis_llm.ipynb
@@ -171,33 +171,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7941368c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_transcript_text(transcript):\n",
-    "    \"\"\"Transcript cleaner adding commas after each snippet\"\"\"\n",
+    "def clean_transcript_text(transcript) -> str:\n",
+    "    \"\"\"\n",
+    "    Rewrite transcript snippets into natural, punctuated language using LLM.\n",
+    "    The OpenAI client is initialized inside the function using the API key.\n",
     "    \n",
-    "    # Add dot after each snippet, then join\n",
-    "    text_parts = []\n",
+    "    Args:\n",
+    "        transcript: Transcript object with .snippets list, each having .text.\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: Cleaned, readable transcript.\n",
+    "    \"\"\"\n",
+    "    # Load API key from environment\n",
+    "    load_dotenv()\n",
+    "    api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "    if not api_key:\n",
+    "        return \"❌ OPENAI_API_KEY not found. Please add it to your .env file.\"\n",
+    "\n",
+    "    # Initialize OpenAI client\n",
+    "    client = OpenAI(api_key=api_key)\n",
+    "\n",
+    "    # Concatenate snippets\n",
+    "    snippet_texts = []\n",
     "    for snippet in transcript.snippets:\n",
     "        clean_text = snippet.text.strip()\n",
     "        if clean_text:\n",
-    "            text_parts.append(clean_text + \",\")\n",
-    "    \n",
-    "    text = \" \".join(text_parts)\n",
-    "    \n",
-    "    # Clean up\n",
-    "    text = re.sub(r'\\[\\xa0__\\xa0\\]', '', text)  # Remove censored parts\n",
-    "    text = re.sub(r'\\[Music\\]', '', text)       # Remove music tags\n",
-    "    text = re.sub(r'\\s+', ' ', text).strip()    # Fix spacing\n",
-    "    \n",
-    "    # Capitalize first letter\n",
-    "    if text:\n",
-    "        text = text[0].upper() + text[1:]\n",
-    "    \n",
-    "    return text"
+    "            snippet_texts.append(clean_text)\n",
+    "    full_transcript = \" \".join(snippet_texts)\n",
+    "\n",
+    "    # Truncate for token safety\n",
+    "    if len(full_transcript) > 3000:\n",
+    "        full_transcript = full_transcript[:3000] + \"...\"\n",
+    "\n",
+    "    try:\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"gpt-4o\",\n",
+    "            messages=[\n",
+    "                {\n",
+    "                    \"role\": \"system\",\n",
+    "                    \"content\": (\n",
+    "                        \"You are a transcript editor. Rewrite text into smooth, natural English prose \"\n",
+    "                        \"with correct punctuation, keeping the original tone and style. \"\n",
+    "                        \"Do not summarize or remove content.\"\n",
+    "                    )\n",
+    "                },\n",
+    "                {\n",
+    "                    \"role\": \"user\",\n",
+    "                    \"content\": f\"TRANSCRIPT: {full_transcript}\"\n",
+    "                }\n",
+    "            ],\n",
+    "            max_tokens=800,\n",
+    "            temperature=0.5\n",
+    "        )\n",
+    "\n",
+    "        cleaned_text = response.choices[0].message.content.strip()\n",
+    "        return cleaned_text\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return f\"❌ Transcript cleaning failed: {str(e)}\""
    ]
   },
   {
@@ -246,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "687f1b1d",
    "metadata": {},
    "outputs": [
@@ -254,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm gonna go ballistic get a, grip oh dear raj, come here you, it's raw, it's loud it's weird okay, come on man what is that, what what what what, what is that, ah it's like barbie's vomit it's like, purple snot i swear to god it's , pinker inside that paris hilton's, lipstick, just touch that fish there, just touch how dry it's got more , wrinkles on it than i have and i'm 44, years of age that should be , cooked fresh, thanks to there hurry up dear, barney yeah but i'm not dick face chef, yeah say that again i said i'm not dick, face you're pissed are you that last, bucket look at me look at me guys not as, pissed as i am you ah, donkey no you're cooking like a donkey i, didn't realize they shrunk down that, much chef, it's a bit like your brain not only is, it shrunk but it disappears, all of you look it's not it's just no, it's not about all it's not about that, oh, damn it pal a bit exploded all over my, face and like i have little tiny like, bits of halibut in my eyes that's what, he took off and there's the filet look, at the filling he molested that poor, thing people have gone to jail for worse, looks like he went with it with a, jackhammer we wasted the most, expensive heart look at it ring the bell, come here you muppets, what a muppet, gail, look i've got raw pasta look at it it's, standing up straight look madam, it's like a thumb left over from, a night out in vegas come on, all of you just taste that will you just, touch that, there's fish hotter than that in, a sushi bar, , this is not possible you're done, you're done, that's why i get served look come here, all of you, he brings that pissing over, and the big surprise is the bus, is raw, one chicken one pork chop five minutes, chef he's trying to propose to his, future fiancee move louie yeah make them, break up before they even get, married 30 seconds cutting pork now, tonight it was painful just watching you, disintegrate, it was like having a root canal and, passing a kidney stone at the same, time, , outcomes look at that, overcooked on the bottom crispy as , and it looks like gandhi's flip-flop, what a shame look this pigeon's, that raw it can still fly touch it stone, cold and raw, come on, sabrina yeah chef look raw yes like it's, still running around in the , field is that purpose no chef so why, this is, , i'm myself we,\n"
+      "I'm gonna go ballistic. Get a grip. Oh dear, Raj, come here. It's raw, it's loud, it's weird. Okay, come on, man, what is that? What, what, what is that? Ah, it's like Barbie's vomit. It's like purple snot. I swear to God, it's pinker inside than Paris Hilton's lipstick. Just touch that fish there, just touch how dry it is. It's got more wrinkles on it than I have, and I'm 44 years of age. That should be cooked fresh. Thanks to there, hurry up, dear Barney. Yeah, but I'm not dickface, Chef. Yeah, say that again. I said I'm not dickface. You're pissed, are you? That last bucket—look at me, look at me, guys—not as pissed as I am, you donkey. No, you're cooking like a donkey. I didn't realize they shrunk down that much, Chef. It's a bit like your brain—not only is it shrunk, but it disappears. All of you, look, it's not—it's just—no, it's not about all, it's not about that. Oh damn it, pal, it exploded all over my face, and I have little tiny bits of halibut in my eyes. That's what he took off, and there's the filet. Look at the filet; he molested that poor thing. People have gone to jail for worse. Looks like he went at it with a jackhammer. We wasted the most expensive part. Look at it. Ring the bell, come here, you muppets. What a muppet, Gail. Look, I've got raw pasta. Look at it, it's standing up straight. Look, madam, it's like a thumb left over from a night out in Vegas. Come on, all of you, just taste that, will you? Just touch that. There's fish hotter than that in a sushi bar. This is not possible. You're done, you're done. That's why I get served. Look, come here, all of you. He brings that over, and the big surprise is the bus is raw. One chicken, one pork chop, five minutes, Chef. He's trying to propose to his future fiancée. Move, Louie. Yeah, make them break up before they even get married. Thirty seconds, cutting pork now. Tonight, it was painful just watching you disintegrate. It was like having a root canal and passing a kidney stone at the same time. Look at that, overcooked on the bottom, crispy as can be, and it looks like Gandhi's flip-flop. What a shame. Look, this pigeon's so raw it can still fly. Touch it. Stone cold and raw. Come on, Sabrina. Yeah, Chef. Look, raw. Yes, like it's still running around in the field. Is that purpose? No, Chef. So why? I'm losing myself.\n"
      ]
     }
    ],
